# LaserPro

./: index.html
Emoji/project/: package.json
Laser-Pro-Engraver-main/: .gitignore  ACTUAL_VERIFICATION_PERFORMED.md  AISuitePanel.tsx  AnalyticsDashboard.tsx  App.tsx  BUILD.md  BUILD_RESULTS.md  CHANGELOG.md  CRITICAL_FIXES_STATUS.md  CloudCollaborationPanel.tsx  ControlPanel.tsx  CustomPresetsManager.tsx  DEVELOPER_GUIDE.md  FEATURES.md  FUNCTIONAL_VERIFICATION.md  FilterGallery.tsx  GITHUB_ACTIONS_GUIDE.md  Glossary.tsx  HelpGuide.tsx  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  LayerPalette.tsx  LicenseModal.tsx  MaterialBrowser.tsx  PreviewArea.tsx  ProfessionalSidebar.tsx  README.md  RELEASE.md  ROADMAP-v0.2.0.md  SerializationPanel.tsx  SetupWizard.tsx  Sidebar.tsx  TEST_FIX_SUMMARY.md  Tutorial.tsx  USER_GUIDE.md  WINDOWS_BUILD_GUIDE.md  build-all.bat  build-all.sh  build.bat  (+14 more)
Laser-Pro-Engraver-main/__tests__/: all-features.test.ts  edge-cases.test.ts  homing-boundaries.test.ts  layerGCode.test.ts  material-library.test.ts  phase3-features.test.ts  professional-filters.test.ts  robustness-tests.test.ts  serialization.test.ts  stress-tests.test.ts  variableText.test.ts
Laser-Pro-Engraver-main/assets/: README.md
Laser-Pro-Engraver-main/components/: Slider.tsx  TextEditor.tsx
Laser-Pro-Engraver-main/docs/: BUILD_GUIDE.md  BUILD_SCRIPTS.md  README.md  (+2 more)
Laser-Pro-Engraver-main/src-tauri/: Cargo.toml  tauri.conf.json
Laser-Pro-Engraver-main/src-tauri/capabilities/: migrated.json
Laser-Pro-Engraver-main/src-tauri/src/: licensing.rs  main.rs  serial.rs
(+43 files in other folders)
