[package]
name = "laser-trace-pro"
version = "1.0.0"
description = "Professional laser engraving software"
authors = ["Shane Foster"]
license = "Commercial"
repository = "https://github.com/Op-era/Laser-Pro-Engraver"
default-run = "laser-trace-pro"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serialport = "4.3"
tokio = { version = "1.35", features = ["sync", "rt-multi-thread"] }
chrono = "0.4"
hostname = "0.4"
dirs = "6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
